# m0sh

./: README.md  TODO.md
example/non_uniform/: CMakeLists.txt  main.cpp
example/regular/: CMakeLists.txt  main.cpp
example/sub/: CMakeLists.txt  compile_commands.json  main.cpp
example/uniform/: CMakeLists.txt  main.cpp
example/unregular/: CMakeLists.txt  main.cpp
include/m0sh/: mesh.h  non_uniform.h  regular.h  structured.h  structured_sub.h  uniform.h  unregular.h
